--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/attention.css">
     <script defer src="js/main.js"></script>
     <title>Tic Tac Toe</title>
 
@@ -23,6 +24,8 @@
         <div id="6"></div>
         <div id="7"></div>
         <div id="8"></div>
-    </section>    
+    </section>
+    <br></br>
+    <button>Play Again?</button>    
 </body>
 </html>
