Add total wins tracker

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <div id="7"></div>
         <div id="8"></div>
     </section>
+    <h3>Player One:</h3>
+    <p div id="scorep1"></p>
+    <h3>Player Two:</h3>
+    <p div id="scorep2"></p>
     <br></br>
     <button>Play Again?</button>    
 </body>
